kube-practice/examples/args.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-busybox
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: busybox
    command: ["sleep"]
    args: ["10"]

---
apiVersion: v1 
kind: Pod 
metadata:
  name: ubuntu-sleeper-2 
spec:
  containers:
  - name: ubuntu
    image: ubuntu
    command:
      - "sleep"
      - "5000"
