kube-practice/examples/bla.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    name: myapp
spec:
  containers:
  - name: redis
    image: redis
