kube-practice/examples/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-busybox
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: busybox
    command: ["sleep 1000"]
