kube-practice/examples/tolerate.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    name: myapp
spec:
  containers:
  - name: redis
    image: redis 
  tolerations:
    - key: "app"
      operator: "Equal"
      value: "blue"
      effect:  "NoSchedule"
